# MLIR-Tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  linalg_include.mlir  log.txt  north_star_include.mlir  readme.md  教程内容.md
1-summary/: 前言.md
10-mlir_opt-and-debug/: CMakeLists.txt  main.cpp
10-mlir_opt-and-debug/include/Dialect/NorthStar/IR/: NorthStarEunms.h  NorthStarTypes.td
10-mlir_opt-and-debug/include/Dialect/NorthStar/Transforms/: CMakeLists.txt
10-mlir_opt-and-debug/src/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarDialect.cpp  NorthStarOps.cpp
10-mlir_opt-and-debug/src/Dialect/NorthStar/Transforms/: ApplyDistributeTransform.cpp  DeviceRegionFusion.cpp  MarkDistributeParallelParameters.cpp
10-mlir_opt-and-debug/src/Interfaces/: CMakeLists.txt  FusionRegionInterfaces.cpp
10-mlir_opt-and-debug/src/Tools/NS-opt/: CMakeLists.txt  NS-opt.cpp
11-lit_for_test/: CMakeLists.txt  main.cpp
11-lit_for_test/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.td  FusionRegionInterfaces.h
11-lit_for_test/include/Utils/: Key.h
11-lit_for_test/src/: CMakeLists.txt
11-lit_for_test/src/Tools/: CMakeLists.txt
11-lit_for_test/src/Tools/NS-opt/: CMakeLists.txt  NS-opt.cpp
11-lit_for_test/test/: lit.cfg.py  lit.site.cfg.py.in  softmax.mlir
11-lit_for_test/test/NorthStar/: device-region-fusion.mlir  mark-distribute-parallel-parameters.mlir
12-operation_lowing_pass/: CMakeLists.txt  main.cpp
12-operation_lowing_pass/include/: CMakeLists.txt
12-operation_lowing_pass/include/Conversion/NorthStarToLinalg/: NorthStarToLinalg.h
12-operation_lowing_pass/include/Dialect/NorthStar/IR/: NorthStarAttrs.td  NorthStarConstraints.td  NorthStarDialect.td  NorthStarEunms.h  NorthStarEunms.td  NorthStarOps.h  NorthStarOps.td
12-operation_lowing_pass/include/Dialect/NorthStar/Transforms/: Passes.td
12-operation_lowing_pass/include/Utils/: Key.h
12-operation_lowing_pass/src/: CMakeLists.txt
12-operation_lowing_pass/src/Conversion/NorthStarToLinalg/: NorthStarToLinalg.cpp
12-operation_lowing_pass/src/Dialect/NorthStar/IR/: NorthStarOps.cpp
12-operation_lowing_pass/src/Dialect/NorthStar/Transforms/: MarkDistributeParallelParameters.cpp
12-operation_lowing_pass/src/Tools/NS-opt/: CMakeLists.txt  NS-opt.cpp
12-operation_lowing_pass/test/: lit.site.cfg.py.in
12-operation_lowing_pass/test/NorthStar/: device-region-fusion.mlir
13-pass_manager/: CMakeLists.txt  main.cpp
13-pass_manager/include/Conversion/: Passes.h  Passes.td
13-pass_manager/include/Pipelines/: Pipelines.h
13-pass_manager/src/: CMakeLists.txt
13-pass_manager/src/Conversion/: CMakeLists.txt
13-pass_manager/src/Interfaces/: DistributeParallelismInterfaces.cpp
13-pass_manager/src/Pipelines/: NorthStarBasicPipeline.cpp
13-pass_manager/src/Utils/: File.cpp
13-pass_manager/test/: CMakeLists.txt  lit.cfg.py
13-pass_manager/test/Conversion/: north_star_to_linalg.mlir
13-pass_manager/test/NorthStar/: apply-distribute-transform.mlir
14-fold_and_canonicalization/: CMakeLists.txt  main.cpp
14-fold_and_canonicalization/include/Conversion/: CMakeLists.txt
14-fold_and_canonicalization/include/Interfaces/: FusionRegionInterfaces.td
14-fold_and_canonicalization/src/Utils/: CMakeLists.txt
14-fold_and_canonicalization/test/NorthStar/: canonicalization.mlir  device-region-fusion.mlir
15-lowing_to_llvm/: CMakeLists.txt  main.cpp
15-lowing_to_llvm/include/Conversion/: Passes.td
15-lowing_to_llvm/include/Executor/: Command.h
15-lowing_to_llvm/include/Pipelines/: Pipelines.h
15-lowing_to_llvm/test/: lit.cfg.py  lit.site.cfg.py.in
2-define_dialect/: CMakeLists.txt  main.cpp
3-define_type/: CMakeLists.txt  main.cpp
4-define_attribute/: CMakeLists.txt  main.cpp
4-define_attribute/include/Dialect/NorthStar/: NorthStarDialect.td  NorthStarTypes.h  NorthStarTypes.td
4-define_attribute/include/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarAttrs.h
4-define_attribute/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarAttrs.cpp  NorthStarDialect.cpp  NorthStarTypes.cpp
4-define_attribute/src/Dialect/NorthStar/IR/: CMakeLists.txt  NorthStarDialect.cpp  NorthStarTypes.cpp
5-define_operation/: CMakeLists.txt  main.cpp
6-define_interface/: CMakeLists.txt  main.cpp
6-define_interface/include/: CMakeLists.txt
6-define_interface/include/Dialect/: CMakeLists.txt
6-define_interface/include/Dialect/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h
6-define_interface/include/Dialect/NorthStar/: NorthStarAttrs.h  NorthStarAttrs.td  NorthStarEunms.td  NorthStarOps.h  NorthStarOps.td  NorthStarTypes.h  NorthStarTypes.td
6-define_interface/include/Dialect/NorthStar/IR/: NorthStarAttrs.td  NorthStarConstraints.td  NorthStarDialect.td  NorthStarEunms.h  NorthStarOps.td  NorthStarTypes.td
6-define_interface/include/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td
6-define_interface/src/: CMakeLists.txt
6-define_interface/src/Dialect/NorthStar/: CMakeLists.txt  NorthStarOps.cpp
6-define_interface/src/Dialect/NorthStar/IR/: NorthStarOps.cpp  NorthStarTypes.cpp
6-define_interface/src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp
7-ir_struct/: CMakeLists.txt  main.cpp
7-ir_struct/include/Dialect/NorthStar/: CMakeLists.txt  NorthStarAttrs.h  NorthStarAttrs.td  NorthStarOps.h  NorthStarOps.td  NorthStarTypes.td
7-ir_struct/include/Dialect/NorthStar/IR/: NorthStarAttrs.h  NorthStarAttrs.td  NorthStarEunms.h  NorthStarEunms.td  NorthStarOps.h  NorthStarTypes.h
7-ir_struct/include/Utils/: File.h
7-ir_struct/src/: CMakeLists.txt
7-ir_struct/src/Dialect/: CMakeLists.txt
7-ir_struct/src/Dialect/NorthStar/: CMakeLists.txt
7-ir_struct/src/Dialect/NorthStar/IR/: CMakeLists.txt
7-ir_struct/src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp
7-ir_struct/src/Utils/: CMakeLists.txt  File.cpp
8-define_pass/: CMakeLists.txt  main.cpp
9-rewrite_pattern/: CMakeLists.txt  main.cpp
tmp/builtin_module_NorthStar/: 0_mark-distribute-parallel-parameters.mlir
(+150 files in other folders)
